--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div class="container">
-
+            <span id="forkongithub"><a href="https://github.com/dflock/seance">Fork me on GitHub</a></span>
             <div class="hero-unit">
                 <img src="img/crystal_ball.png" alt="" />
                 <h1>Welcome to the Séance!</h1>
