Updated readme, added some notes to frontend index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,7 +169,7 @@
             <div class="hero-unit">
                 <img src="img/crystal_ball.png" alt="" />
                 <h1>Welcome to the Séance!</h1>
-                <p>Taking a little peek behind the curtain at medium.com <sup>*</sup></p>
+                <p>Taking a little peek behind the curtain at medium.com <sup><a href="#nb">*</a></sup></p>
             </div>
 
             <div class="row">
@@ -397,14 +397,13 @@
 
             <div class="row">
                 <div class="span11 alert alert-info">
-                  <strong>Please Note:</strong> This currently doesn't update live - it's cached and updated manually from time to time - so there's no point in refreshing.
+                  <p><strong><a>Please Note</a>:</strong> This currently doesn't update live - it's cached and updated manually from time to time - so there's no point in refreshing.</p>
+                  <p>Also, this is currently based on incomplete data - I didn't leave the crawler running for long enough to finish completely, but I think I probably got most of the data.</p>
+                  <p id="nb"><sup>*</sup> Just for fun, metadata only - totally not worth suing me for :) Questions? Answers: <a href="duncan.lock@gmail.com">duncan.lock@gmail.com</a></p>
                 </div>
             </div>
 
-            <hr>
-
             <footer>
-                <p><sup>*</sup> Just for fun - totally not worth suing me for :) Questions? Answers: <a href="duncan.lock@gmail.com">duncan.lock@gmail.com</a></p>
             </footer>
 
         </div> <!-- /container -->
